kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: init-injector
  namespace: webhook-system
spec:
  ports:
  - port: 443
    targetPort: 8443
    name: https
  selector:
    app: init-injector-operator
