kubernetes/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: init-injector-webhook
webhooks:
- name: init-injector.example.com
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 10
  failurePolicy: Fail #Ignore  # Use Fail in prod
  matchPolicy: Equivalent
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
    scope: "Namespaced"
  clientConfig:
    service:
      name: init-injector
      namespace: webhook-system
      path: "/mutate"
      port: 443
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURDekNDQWZPZ0F3SUJBZ0lVY3JDSldTV1ZxU0poclRwT0FIOVFXank4WWhVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZURVRNQkVHQTFVRUF3d0tkMlZpYUc5dmF5MWpZVEFlRncweU5qQXlNak15TWpNeU1UbGFGdzB6TmpBeQpNakV5TWpNeU1UbGFNQlV4RXpBUkJnTlZCQU1NQ25kbFltaHZiMnN0WTJFd2dnRWlNQTBHQ1NxR1NJYjNEUUVCCkFRVUFBNElCRHdBd2dnRUtBb0lCQVFDdkU1MUNYWER3OG5pUlExNEJWeGgyZ3pNeVpJVERiZHBjblFRcEo4Q3QKeitQeWRWU1lwZm5qbm93Q2ljd29taVhQNElGVUw3WWM3Ylg1TFh3WnJXcjMwdkxHZStGODNwZWpERDhLT1d3egpENlZTZ1hWTDFwOT [...]
  objectSelector:
    matchLabels:
      init-inject: "true"  # ← Only pods with this label!
  #namespaceSelector:
  #  matchExpressions:
  #  - key: init-injection
  #    operator: In
  #    values: ["enabled"]
